{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 120,
  "lineage": "09bef424-1b80-b404-ddaf-5120b1abad2d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:959243851260:security-group/sg-091383d7b5a771a98",
            "description": "Allow all traffic within the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic to the internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091383d7b5a771a98",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.24.0.0/16"
                ],
                "description": "Allow all traffic from within the VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-all-vpc",
            "name_prefix": "",
            "owner_id": "959243851260",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Example": "aws/eks-private",
              "Repo": "terraform-kubernetes-anyscale-foundation-modules",
              "Test": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Example": "aws/eks-private",
              "Repo": "terraform-kubernetes-anyscale-foundation-modules",
              "Test": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e935d45def1172f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_vpc.anyscale_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.anyscale_vpc",
      "mode": "data",
      "type": "aws_vpc_endpoint",
      "name": "gateway_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:959243851260:vpc-endpoint/vpce-037794cdd29c18f94",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-037794cdd29c18f94",
            "owner_id": "959243851260",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-01a939037fdea560f",
              "rtb-0bb5bd7d61f5fc971",
              "rtb-0dc5adde5df37694b"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "tags": {
              "Name": "anyscale-anyscale-eks-private-gateway-endpoint-com.amazonaws.us-west-2.s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-08e935d45def1172f"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.anyscale_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d5a2cd7d6ff1f2ce",
            "arn": "arn:aws:ec2:us-west-2:959243851260:elastic-ip/eipalloc-0d5a2cd7d6ff1f2ce",
            "domain": "vpc",
            "id": "eipalloc-0d5a2cd7d6ff1f2ce",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-82-203-164.us-west-2.compute.amazonaws.com",
            "public_ip": "35.82.203.164",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "anyscale-anyscale-eks-private-us-west-2a"
            },
            "tags_all": {
              "Name": "anyscale-anyscale-eks-private-us-west-2a"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.data.aws_availability_zones.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aeedcedfc1341d0d",
            "arn": "arn:aws:ec2:us-west-2:959243851260:elastic-ip/eipalloc-0aeedcedfc1341d0d",
            "domain": "vpc",
            "id": "eipalloc-0aeedcedfc1341d0d",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-253-96-146.us-west-2.compute.amazonaws.com",
            "public_ip": "44.253.96.146",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "anyscale-anyscale-eks-private-us-west-2b"
            },
            "tags_all": {
              "Name": "anyscale-anyscale-eks-private-us-west-2b"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.data.aws_availability_zones.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.anyscale_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "anyscale_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:959243851260:internet-gateway/igw-0994cd387b826985e",
            "id": "igw-0994cd387b826985e",
            "owner_id": "959243851260",
            "tags": {
              "Name": "anyscale-anyscale-eks-private"
            },
            "tags_all": {
              "Name": "anyscale-anyscale-eks-private"
            },
            "vpc_id": "vpc-08e935d45def1172f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.anyscale_vpc.aws_vpc_ipv4_cidr_block_association.anyscale_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.anyscale_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d5a2cd7d6ff1f2ce",
            "association_id": "eipassoc-0b1e797d49f7795de",
            "connectivity_type": "public",
            "id": "nat-0f520738f5467d5fb",
            "network_interface_id": "eni-01d20d1be449b6f0f",
            "private_ip": "172.24.101.50",
            "public_ip": "35.82.203.164",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bf73ba39b44239b5",
            "tags": {
              "Name": "anyscale-anyscale-eks-private-us-west-2a"
            },
            "tags_all": {
              "Name": "anyscale-anyscale-eks-private-us-west-2a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_eip.nat_gateway",
            "module.anyscale_vpc.aws_internet_gateway.anyscale_vpc",
            "module.anyscale_vpc.aws_subnet.public",
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.anyscale_vpc.aws_vpc_ipv4_cidr_block_association.anyscale_vpc",
            "module.anyscale_vpc.data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aeedcedfc1341d0d",
            "association_id": "eipassoc-017e6b5283205ed4a",
            "connectivity_type": "public",
            "id": "nat-0cba7b4be618e9e1c",
            "network_interface_id": "eni-0dc75d77ad583aa54",
            "private_ip": "172.24.102.161",
            "public_ip": "44.253.96.146",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06c0cb9d17c084956",
            "tags": {
              "Name": "anyscale-anyscale-eks-private-us-west-2b"
            },
            "tags_all": {
              "Name": "anyscale-anyscale-eks-private-us-west-2b"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_eip.nat_gateway",
            "module.anyscale_vpc.aws_internet_gateway.anyscale_vpc",
            "module.anyscale_vpc.aws_subnet.public",
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.anyscale_vpc.aws_vpc_ipv4_cidr_block_association.anyscale_vpc",
            "module.anyscale_vpc.data.aws_availability_zones.default"
          ]
        }
      ]
    },
    {
      "module": "module.anyscale_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bb5bd7d61f5fc9711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f520738f5467d5fb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bb5bd7d61f5fc971",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_eip.nat_gateway",
            "module.anyscale_vpc.aws_internet_gateway.anyscale_vpc",
            "module.anyscale_vpc.aws_nat_gateway.nat_gateway",
            "module.anyscale_vpc.aws_route_table.private",
            "module.anyscale_vpc.aws_subnet.public",
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.anyscale_vpc.aws_vpc_ipv4_cidr_block_association.anyscale_vpc",
            "module.anyscale_vpc.data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0dc5adde5df37694b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cba7b4be618e9e1c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dc5adde5df37694b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_eip.nat_gateway",
            "module.anyscale_vpc.aws_internet_gateway.anyscale_vpc",
            "module.anyscale_vpc.aws_nat_gateway.nat_gateway",
            "module.anyscale_vpc.aws_route_table.private",
            "module.anyscale_vpc.aws_subnet.public",
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.anyscale_vpc.aws_vpc_ipv4_cidr_block_association.anyscale_vpc",
            "module.anyscale_vpc.data.aws_availability_zones.default"
          ]
        }
      ]
    },
    {
      "module": "module.anyscale_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0994cd387b826985e",
            "id": "r-rtb-01a939037fdea560f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01a939037fdea560f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_internet_gateway.anyscale_vpc",
            "module.anyscale_vpc.aws_route_table.public",
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.anyscale_vpc.aws_vpc_ipv4_cidr_block_association.anyscale_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.anyscale_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:959243851260:route-table/rtb-0bb5bd7d61f5fc971",
            "id": "rtb-0bb5bd7d61f5fc971",
            "owner_id": "959243851260",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "anyscale-anyscale-eks-private-private-us-west-2a"
            },
            "tags_all": {
              "Name": "anyscale-anyscale-eks-private-private-us-west-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e935d45def1172f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.anyscale_vpc.aws_vpc_ipv4_cidr_block_association.anyscale_vpc",
            "module.anyscale_vpc.data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:959243851260:route-table/rtb-0dc5adde5df37694b",
            "id": "rtb-0dc5adde5df37694b",
            "owner_id": "959243851260",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "anyscale-anyscale-eks-private-private-us-west-2b"
            },
            "tags_all": {
              "Name": "anyscale-anyscale-eks-private-private-us-west-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e935d45def1172f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.anyscale_vpc.aws_vpc_ipv4_cidr_block_association.anyscale_vpc",
            "module.anyscale_vpc.data.aws_availability_zones.default"
          ]
        }
      ]
    },
    {
      "module": "module.anyscale_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:959243851260:route-table/rtb-01a939037fdea560f",
            "id": "rtb-01a939037fdea560f",
            "owner_id": "959243851260",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "anyscale-anyscale-eks-private-public"
            },
            "tags_all": {
              "Name": "anyscale-anyscale-eks-private-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e935d45def1172f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.anyscale_vpc.aws_vpc_ipv4_cidr_block_association.anyscale_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.anyscale_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042aa8c9d7aacf958",
            "route_table_id": "rtb-0bb5bd7d61f5fc971",
            "subnet_id": "subnet-00659bbca30d62415"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_route_table.private",
            "module.anyscale_vpc.aws_subnet.private",
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.anyscale_vpc.aws_vpc_ipv4_cidr_block_association.anyscale_vpc",
            "module.anyscale_vpc.data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089c7969ec6997dae",
            "route_table_id": "rtb-0dc5adde5df37694b",
            "subnet_id": "subnet-0bd3622e30fa3630d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_route_table.private",
            "module.anyscale_vpc.aws_subnet.private",
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.anyscale_vpc.aws_vpc_ipv4_cidr_block_association.anyscale_vpc",
            "module.anyscale_vpc.data.aws_availability_zones.default"
          ]
        }
      ]
    },
    {
      "module": "module.anyscale_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0940f41218ce6b182",
            "route_table_id": "rtb-01a939037fdea560f",
            "subnet_id": "subnet-0bf73ba39b44239b5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_route_table.public",
            "module.anyscale_vpc.aws_subnet.public",
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.anyscale_vpc.aws_vpc_ipv4_cidr_block_association.anyscale_vpc",
            "module.anyscale_vpc.data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068119cbc1b219ffc",
            "route_table_id": "rtb-01a939037fdea560f",
            "subnet_id": "subnet-06c0cb9d17c084956"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_route_table.public",
            "module.anyscale_vpc.aws_subnet.public",
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.anyscale_vpc.aws_vpc_ipv4_cidr_block_association.anyscale_vpc",
            "module.anyscale_vpc.data.aws_availability_zones.default"
          ]
        }
      ]
    },
    {
      "module": "module.anyscale_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:959243851260:subnet/subnet-00659bbca30d62415",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.24.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00659bbca30d62415",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "959243851260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "anyscale-anyscale-eks-private-private-us-west-2a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "anyscale-anyscale-eks-private-private-us-west-2a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08e935d45def1172f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.anyscale_vpc.aws_vpc_ipv4_cidr_block_association.anyscale_vpc",
            "module.anyscale_vpc.data.aws_availability_zones.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:959243851260:subnet/subnet-0bd3622e30fa3630d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.24.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd3622e30fa3630d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "959243851260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "anyscale-anyscale-eks-private-private-us-west-2b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "anyscale-anyscale-eks-private-private-us-west-2b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08e935d45def1172f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.anyscale_vpc.aws_vpc_ipv4_cidr_block_association.anyscale_vpc",
            "module.anyscale_vpc.data.aws_availability_zones.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.anyscale_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:959243851260:subnet/subnet-0bf73ba39b44239b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.24.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf73ba39b44239b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "959243851260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "anyscale-anyscale-eks-private-public-us-west-2a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "anyscale-anyscale-eks-private-public-us-west-2a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08e935d45def1172f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.anyscale_vpc.aws_vpc_ipv4_cidr_block_association.anyscale_vpc",
            "module.anyscale_vpc.data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:959243851260:subnet/subnet-06c0cb9d17c084956",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.24.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c0cb9d17c084956",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "959243851260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "anyscale-anyscale-eks-private-public-us-west-2b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "anyscale-anyscale-eks-private-public-us-west-2b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08e935d45def1172f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.anyscale_vpc.aws_vpc_ipv4_cidr_block_association.anyscale_vpc",
            "module.anyscale_vpc.data.aws_availability_zones.default"
          ]
        }
      ]
    },
    {
      "module": "module.anyscale_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "anyscale_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:959243851260:vpc/vpc-08e935d45def1172f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.24.0.0/16",
            "default_network_acl_id": "acl-098c6c9cff2011876",
            "default_route_table_id": "rtb-084dbf6684a2c5b33",
            "default_security_group_id": "sg-0c330e090877402d4",
            "dhcp_options_id": "dopt-0c922774",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08e935d45def1172f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-084dbf6684a2c5b33",
            "owner_id": "959243851260",
            "tags": {
              "Name": "anyscale-anyscale-eks-private",
              "tf_sub_module": "aws-anyscale-vpc"
            },
            "tags_all": {
              "Name": "anyscale-anyscale-eks-private",
              "tf_sub_module": "aws-anyscale-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.anyscale_vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "gateway_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:959243851260:vpc-endpoint/vpce-037794cdd29c18f94",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-037794cdd29c18f94",
            "owner_id": "959243851260",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-west-2.s3",
            "service_region": "us-west-2",
            "state": "available",
            "tags": {
              "Name": "anyscale-anyscale-eks-private-gateway-endpoint-com.amazonaws.us-west-2.s3"
            },
            "tags_all": {
              "Name": "anyscale-anyscale-eks-private-gateway-endpoint-com.amazonaws.us-west-2.s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-08e935d45def1172f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.anyscale_vpc.aws_vpc_ipv4_cidr_block_association.anyscale_vpc",
            "module.anyscale_vpc.data.aws_vpc_endpoint_service.gateway_endpoints"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:959243851260:security-group/sg-016c2617b13c7792b",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-016c2617b13c7792b",
            "ingress": [],
            "name": "anyscale-eks-private-cluster-20250724075921470200000024",
            "name_prefix": "anyscale-eks-private-cluster-",
            "owner_id": "959243851260",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Example": "aws/eks-private",
              "Name": "anyscale-eks-private-cluster",
              "Repo": "terraform-kubernetes-anyscale-foundation-modules",
              "Test": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Example": "aws/eks-private",
              "Name": "anyscale-eks-private-cluster",
              "Repo": "terraform-kubernetes-anyscale-foundation-modules",
              "Test": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e935d45def1172f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_vpc.anyscale_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:959243851260:security-group/sg-07b0655f993274be3",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-07b0655f993274be3",
            "ingress": [],
            "name": "anyscale-eks-private-node-20250724075921470700000026",
            "name_prefix": "anyscale-eks-private-node-",
            "owner_id": "959243851260",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Example": "aws/eks-private",
              "Name": "anyscale-eks-private-node",
              "Repo": "terraform-kubernetes-anyscale-foundation-modules",
              "Test": "true",
              "kubernetes.io/cluster/anyscale-eks-private": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Example": "aws/eks-private",
              "Name": "anyscale-eks-private-node",
              "Repo": "terraform-kubernetes-anyscale-foundation-modules",
              "Test": "true",
              "kubernetes.io/cluster/anyscale-eks-private": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e935d45def1172f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_vpc.anyscale_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-4025568072",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-016c2617b13c7792b",
            "security_group_rule_id": "sgr-03c61dd3a72a2aafa",
            "self": false,
            "source_security_group_id": "sg-07b0655f993274be3",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "anyscale_ingress_nodes",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress - Anyscale ports",
            "from_port": 80,
            "id": "sgrule-461601366",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07b0655f993274be3",
            "security_group_rule_id": "sgr-09f33da06380d151b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-435587368",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07b0655f993274be3",
            "security_group_rule_id": "sgr-0ab69ed1fcf43cc54",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1601390251",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07b0655f993274be3",
            "security_group_rule_id": "sgr-0d0de7a8ac0d1c1c8",
            "self": false,
            "source_security_group_id": "sg-016c2617b13c7792b",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3667848412",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07b0655f993274be3",
            "security_group_rule_id": "sgr-0aea94dfc8bd68fba",
            "self": false,
            "source_security_group_id": "sg-016c2617b13c7792b",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-333220682",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07b0655f993274be3",
            "security_group_rule_id": "sgr-0deb600fb88e218a0",
            "self": false,
            "source_security_group_id": "sg-016c2617b13c7792b",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-8435563",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07b0655f993274be3",
            "security_group_rule_id": "sgr-067007609cfcd08f0",
            "self": false,
            "source_security_group_id": "sg-016c2617b13c7792b",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1679918240",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07b0655f993274be3",
            "security_group_rule_id": "sgr-0bff20e3dfe5f2397",
            "self": false,
            "source_security_group_id": "sg-016c2617b13c7792b",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-931470200",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07b0655f993274be3",
            "security_group_rule_id": "sgr-0a7b62a7b1537e6a7",
            "self": false,
            "source_security_group_id": "sg-016c2617b13c7792b",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-872977267",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07b0655f993274be3",
            "security_group_rule_id": "sgr-0a462c01c3ad225c3",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-812014980",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07b0655f993274be3",
            "security_group_rule_id": "sgr-0715dd00a4ae9e280",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2486828651",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-07b0655f993274be3",
            "security_group_rule_id": "sgr-0983d879ae0161e52",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.anyscale_vpc.aws_vpc.anyscale_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}